--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ Icon
 # Thumbnails
 ._*
 
+# UserSetting
+*.csv
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
