--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Icon
 
 # UserSetting
 *.csv
+**/config/
+**/node_modules/
 
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
